Packages_2024/llvm-project_20.1.2/llvm/Core.inc


function LLVMHalfType: TLLVMTypeRef; cdecl; external libllvm;
function LLVMBFloatType: TLLVMTypeRef; cdecl; external libllvm;
function LLVMFloatType: TLLVMTypeRef; cdecl; external libllvm;
function LLVMDoubleType: TLLVMTypeRef; cdecl; external libllvm;
function LLVMX86FP80Type: TLLVMTypeRef; cdecl; external libllvm;
function LLVMFP128Type: TLLVMTypeRef; cdecl; external libllvm;
function LLVMPPCFP128Type: TLLVMTypeRef; cdecl; external libllvm;

function LLVMFunctionType(ReturnType: TLLVMTypeRef; ParamTypes: PLLVMTypeRef; ParamCount: dword; IsVarArg: TLLVMBool): TLLVMTypeRef; cdecl; external libllvm;
function LLVMIsFunctionVarArg(FunctionTy: TLLVMTypeRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetReturnType(FunctionTy: TLLVMTypeRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMCountParamTypes(FunctionTy: TLLVMTypeRef): dword; cdecl; external libllvm;
procedure LLVMGetParamTypes(FunctionTy: TLLVMTypeRef; Dest: PLLVMTypeRef); cdecl; external libllvm;
function LLVMStructTypeInContext(C: TLLVMContextRef; ElementTypes: PLLVMTypeRef; ElementCount: dword; Pack: TLLVMBool): TLLVMTypeRef; cdecl; external libllvm;
function LLVMStructType(ElementTypes: PLLVMTypeRef; ElementCount: dword; Pack: TLLVMBool): TLLVMTypeRef; cdecl; external libllvm;
function LLVMStructCreateNamed(C: TLLVMContextRef; Name: pchar): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetStructName(Ty: TLLVMTypeRef): pchar; cdecl; external libllvm;
procedure LLVMStructSetBody(StructTy: TLLVMTypeRef; ElementTypes: PLLVMTypeRef; ElementCount: dword; Pack: TLLVMBool); cdecl; external libllvm;
function LLVMCountStructElementTypes(StructTy: TLLVMTypeRef): dword; cdecl; external libllvm;
procedure LLVMGetStructElementTypes(StructTy: TLLVMTypeRef; Dest: PLLVMTypeRef); cdecl; external libllvm;
function LLVMStructGetTypeAtIndex(StructTy: TLLVMTypeRef; i: dword): TLLVMTypeRef; cdecl; external libllvm;
function LLVMIsPackedStruct(StructTy: TLLVMTypeRef): TLLVMBool; cdecl; external libllvm;
function LLVMIsOpaqueStruct(StructTy: TLLVMTypeRef): TLLVMBool; cdecl; external libllvm;
function LLVMIsLiteralStruct(StructTy: TLLVMTypeRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetElementType(Ty: TLLVMTypeRef): TLLVMTypeRef; cdecl; external libllvm;
procedure LLVMGetSubtypes(Tp: TLLVMTypeRef; Arr: PLLVMTypeRef); cdecl; external libllvm;
function LLVMGetNumContainedTypes(Tp: TLLVMTypeRef): dword; cdecl; external libllvm;
function LLVMArrayType(ElementType: TLLVMTypeRef; ElementCount: dword): TLLVMTypeRef; cdecl; external libllvm;
function LLVMArrayType2(ElementType: TLLVMTypeRef; ElementCount: Tuint64_t): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetArrayLength(ArrayTy: TLLVMTypeRef): dword; cdecl; external libllvm;
function LLVMGetArrayLength2(ArrayTy: TLLVMTypeRef): Tuint64_t; cdecl; external libllvm;
function LLVMPointerType(ElementType: TLLVMTypeRef; AddressSpace: dword): TLLVMTypeRef; cdecl; external libllvm;
function LLVMPointerTypeIsOpaque(Ty: TLLVMTypeRef): TLLVMBool; cdecl; external libllvm;
function LLVMPointerTypeInContext(C: TLLVMContextRef; AddressSpace: dword): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetPointerAddressSpace(PointerTy: TLLVMTypeRef): dword; cdecl; external libllvm;
function LLVMVectorType(ElementType: TLLVMTypeRef; ElementCount: dword): TLLVMTypeRef; cdecl; external libllvm;
function LLVMScalableVectorType(ElementType: TLLVMTypeRef; ElementCount: dword): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetVectorSize(VectorTy: TLLVMTypeRef): dword; cdecl; external libllvm;
function LLVMGetConstantPtrAuthPointer(PtrAuth: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetConstantPtrAuthKey(PtrAuth: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetConstantPtrAuthDiscriminator(PtrAuth: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetConstantPtrAuthAddrDiscriminator(PtrAuth: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;

function LLVMVoidTypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMLabelTypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMX86AMXTypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMTokenTypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMMetadataTypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;

function LLVMVoidType: TLLVMTypeRef; cdecl; external libllvm;
function LLVMLabelType: TLLVMTypeRef; cdecl; external libllvm;
function LLVMX86AMXType: TLLVMTypeRef; cdecl; external libllvm;

function LLVMTargetExtTypeInContext(C: TLLVMContextRef; Name: pchar; TypeParams: PLLVMTypeRef; TypeParamCount: dword; IntParams: Pdword;
  IntParamCount: dword): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetTargetExtTypeName(TargetExtTy: TLLVMTypeRef): pchar; cdecl; external libllvm;
function LLVMGetTargetExtTypeNumTypeParams(TargetExtTy: TLLVMTypeRef): dword; cdecl; external libllvm;
function LLVMGetTargetExtTypeTypeParam(TargetExtTy: TLLVMTypeRef; Idx: dword): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetTargetExtTypeNumIntParams(TargetExtTy: TLLVMTypeRef): dword; cdecl; external libllvm;
function LLVMGetTargetExtTypeIntParam(TargetExtTy: TLLVMTypeRef; Idx: dword): dword; cdecl; external libllvm;
